# html-table-parser-python3

./: .gitignore  README.md  README.rst  example_of_usage.py  html_table_converter  html_table_to_csv_converter  pyproject.toml  setup.py
.github/workflows/: release.yaml
html_table_parser/: __init__.py  html_table_converter.py  parser.py
test/: __init__.py  test_parser.py
test/test_cases/: named_tables.html  nested_table.html  single_table.html  tags_inside_cells.html  two_tables.html  with_char_ref.html
tests/: test_sample.py  test_table.py
